# ucsb

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yml  pyproject.toml  setup.cfg
src/: app.py  app_creation.py  config.py  exceptions.py  messages.py  models.py  urls.py
src/DAL/: adding_data_to_catalog.py  adding_user.py  admin.py  auth.py  catalogs_dal.py  contractors_dal.py  documents_dal.py  getting_data_from_catalog.py  grant_type.py  registration.py  representatives_dal.py  requests.py  securities.py  tokens.py  user.py  users_dal.py  utils.py
src/api/: admins.py  auth.py  catalogs.py  contractors.py  files.py  index.py  operators.py  representatives.py  requests.py  securitites.py  workers.py
src/controller/: abstract_controller.py  admins.py  auth.py  authorization_decorators.py  contractors.py  files.py  index.py  operator.py  operators.py  representatives.py  requests.py  securities.py  workers.py
src/database/: database.py  models.py  user_roles.py
src/static/: add_catalog_element.js  add_form.css  add_operator_form.css  admin.css  admin_add_form.css  contractor_add_form.css  cookie_clearing.js  copy_url_to_clipboard.js  delete_catalog_element.js  delete_user_to_register.js  login.css  operator.css  operator_requests.css  operator_worker_view.css  reg_form.css  representative.css  representatives_requests.css  request_add_form.css  (+7 more)
tests/: conftest.py  test_adding_user.py  test_auth_DAL.py  test_dal_utils.py  test_document.py  test_registration.py  test_representative_dal.py  test_requests_DAL.py  test_tokens.py
(+68 files in other folders)
